--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS base
+FROM node:22.12.0-alpine AS base
 
 # This Dockerfile is copy-pasted into our main docs at /docs/handbook/deploying-with-docker.
 # Make sure you update both files!
@@ -9,7 +9,9 @@ RUN apk update
 RUN apk add --no-cache libc6-compat
 # Set working directory
 WORKDIR /app
-RUN yarn global add turbo
+RUN npm -g update 11.1.0
+RUN yarn global add turbo@2.3.4
+RUN yarn global add pnpm@9.15.4
 COPY . .
 RUN turbo prune web --docker
 
@@ -19,9 +21,12 @@ RUN apk update
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
+RUN yarn global add turbo@2.3.4
+RUN yarn global add pnpm@9.15.4
+
 # First install the dependencies (as they change less often)
 COPY --from=builder /app/out/json/ .
-RUN yarn install
+RUN pnpm install
 
 # Build the project
 COPY --from=builder /app/out/full/ .
@@ -33,7 +38,7 @@ COPY --from=builder /app/out/full/ .
 # ARG TURBO_TOKEN
 # ENV TURBO_TOKEN=$TURBO_TOKEN
 
-RUN yarn turbo build
+RUN turbo build --filter=web
 
 FROM base AS runner
 WORKDIR /app
