--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,19 +9,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@repo/ui": "workspace:*",
+    "@types/workbox-window": "^5.0.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/ui": "workspace:*"
+    "workbox-precaching": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
+    "@repo/compose-plugin": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@repo/workbox-config": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "typescript": "5.5.4"
   }
 }
