--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "turbo run lint",
     "test": "turbo run test"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@types/glob": "^8.1.0",
+    "@types/node": "^20.11.24",
     "prettier": "^3.2.5",
     "turbo": "^2.4.0"
   },
@@ -19,5 +20,8 @@
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@9.15.4",
+  "dependencies": {
+    "workbox-routing": "^7.3.0"
+  }
 }
