--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,19 +11,14 @@
   "dependencies": {
     "@emotion/cache": "^11.14.0",
     "@repo/ui": "workspace:*",
-    "@types/workbox-window": "^5.0.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "workbox-precaching": "^7.3.0",
-    "workbox-window": "^7.3.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
-    "@repo/compose-plugin": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/workbox-config": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
